# ad-astra

./: 404.html  CNAME  EULA.md  FAQ.md  README.md  highlight.js  index.html  playground.html  print.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-book.yml
developer-guide/: analysis.html  api-overview.html  evaluation.html  exporting.html  language-server.html  web-assembly.html
developer-guide/analysis/: access-guards.html  advanced-analysis.html  diagnostics.html  editing.html  module-text.html
developer-guide/exporting/: advanced-export.html  comments.html  functions.html  operators.html  script-packages.html  statics-and-consts.html  structs.html
examples/: algebra.adastra  closures.adastra  collatz.adastra  mutability.adastra  structs.adastra
extra/lsp/: example.rs  lsp-client.js  lsp-worker.js  runner-worker.js
user-guide/: control-flow.html  expressions.html  memory-model.html  mutability.html  syntax-overview.html  type-system.html
user-guide/control-flow/: conditional-branching.html  expression-statements.html  imports.html  loop-statements.html  nested-blocks.html  returning-statements.html  variables.html
user-guide/expressions/: arrays.html  booleans.html  functions.html  nil-data.html  numbers.html  operators-priority.html  ranges.html  strings.html  structures.html
work/: Cargo.toml  rustfmt.toml
work/.cargo/: config.toml
work/book/: README.md  book.toml  build.sh
work/book/src/: SUMMARY.md  introduction.md  playground.md
work/book/src/developer-guide/: analysis.md  api-overview.md  evaluation.md  exporting.md  language-server.md  web-assembly.md
work/book/src/developer-guide/analysis/: access-guards.md  advanced-analysis.md  diagnostics.md  editing.md  module-text.md
work/book/src/developer-guide/exporting/: advanced-export.md  comments.md  functions.md  operators.md  script-packages.md  statics-and-consts.md  structs.md
work/book/src/extra/: playground.js
work/book/src/user-guide/: control-flow.md  expressions.md  memory-model.md  mutability.md  syntax-overview.md  type-system.md
work/book/src/user-guide/control-flow/: conditional-branching.md  expression-statements.md  imports.md  loop-statements.md  nested-blocks.md  returning-statements.md  variables.md
work/book/src/user-guide/expressions/: arrays.md  booleans.md  functions.md  nil-data.md  numbers.md  operators-priority.md  ranges.md  strings.md  structures.md
work/book/theme/: customization.css  head.hbs
work/crates/export/: Cargo.toml  README.md
work/crates/export/src/: lib.rs
work/crates/export/src/export/: config.rs  item.rs  item_const.rs  item_fn.rs  item_impl.rs  item_static.rs  item_struct.rs  item_trait.rs  item_type.rs  mod.rs
work/crates/export/src/utils/: attr.rs  context.rs  declaration.rs  derive.rs  facade.rs  invoke.rs  manifest.rs  mod.rs  morphism.rs  ops.rs  path.rs  print.rs  resolve.rs  seed.rs  shallow.rs  ty.rs
work/crates/main/: Cargo.toml
work/crates/main/src/: lib.rs  report.rs
work/crates/main/src/analysis/: closeness.rs  completions.rs  description.rs  diagnostics.rs  error.rs  issues.rs  mod.rs  module.rs  read.rs  symbols.rs  text.rs  write.rs
work/crates/main/src/exports/: array.rs  boolean.rs  boxed.rs  cow.rs  mod.rs  number.rs  option.rs  range.rs  result.rs  slice.rs  string.rs  structure.rs  tuple.rs  unit.rs  utils.rs
work/crates/main/src/format/: formatter.rs  highlight.rs  mod.rs  snippet.rs
work/crates/main/src/interpret/: assembly.rs  compiler.rs  engine.rs  function.rs  mod.rs  stack.rs
work/crates/main/src/runtime/: __intrinsics.rs  borrow.rs  cell.rs  coercion.rs  error.rs  hints.rs  ident.rs  invoke.rs  memory.rs  mod.rs  object.rs  ops.rs  origin.rs  package.rs  ty.rs
work/crates/main/src/semantics/: analysis.rs  assembler.rs  diagnostics.rs  floats.rs  flow.rs  idents.rs  lifetimes.rs  mod.rs  names.rs  setup.rs  syntax.rs  tag.rs  ty.rs
work/crates/main/src/server/: action.rs  command.rs  completion.rs  config.rs  definition.rs  diagnostics.rs  file.rs  format.rs  highlight.rs  hints.rs  hover.rs  implementation.rs  lens.rs  logger.rs  mod.rs  rename.rs  rpc.rs  server.rs  signature.rs  snippets.rs  startup.rs  tasks.rs  utils.rs
work/crates/main/src/syntax/: classes.rs  expr.rs  mod.rs  node.rs  span.rs  token.rs
work/examples/: README.md  runner-dbg.sh  runner-prod.sh  wasm-build.sh
work/examples/exporting/: Cargo.toml
work/examples/exporting/src/: lib.rs
work/examples/lsp-client/: .vscodeignore  grammar.json  language.json  package.json  settings.json
work/examples/lsp-client/src/: extension.ts
work/examples/lsp-server/: Cargo.toml
work/examples/lsp-server/src/: main.rs
work/examples/runner/: Cargo.toml
work/examples/runner/src/: main.rs
work/examples/scripts/: quicksort.adastra
work/examples/wasm/: Cargo.toml  index.html  index.js
work/examples/wasm/js/: grammar.js  lsp-client.js  lsp-server.js  lsp-worker.js  runner-server.js  theme.js
work/examples/wasm/src/: data.rs  lib.rs  logger.rs  runner.rs  server.rs  worker.rs
