################################################################################
# This file is part of "Ad Astra", an embeddable scripting programming         #
# language platform.                                                           #
#                                                                              #
# This work is proprietary software with source-available code..               #
#                                                                              #
# To copy, use, distribute, or contribute to this work, you must agree to.     #
# the terms of the General License Agreement:.                                 #
#                                                                              #
# https://github.com/Eliah-Lakhin/ad-astra/blob/master/EULA.md.                #
#                                                                              #
# The agreement grants a Basic Commercial License, allowing you to use.        #
# this work in non-commercial and limited commercial products with a total.    #
# gross revenue cap. To remove this commercial limit for one of your.          #
# products, you must acquire a Full Commercial License..                       #
#                                                                              #
# If you contribute to the source code, documentation, or related materials,.  #
# you must grant me an exclusive license to these contributions..              #
# Contributions are governed by the "Contributions" section of the General.    #
# License Agreement..                                                          #
#                                                                              #
# Copying the work in parts is strictly forbidden, except as permitted.        #
# under the General License Agreement..                                        #
#                                                                              #
# If you do not or cannot agree to the terms of this Agreement,.               #
# do not use this work..                                                       #
#                                                                              #
# This work is provided "as is", without any warranties, express or implied,.  #
# except where such disclaimers are legally invalid.                           #
#                                                                              #
# Copyright (c) 2024 Ilya Lakhin (Илья Александрович Лахин)..                  #
# All rights reserved..                                                        #
################################################################################

[package]
name = "ad-astra-export"
version = "1.0.0"
authors = ["Ilya Lakhin (Илья Александрович Лахин) <eliah.lakhin@gmail.com>"]
edition = "2021"
rust-version = "1.79"
description = "Embeddable scripting language platform Ad Astra. Macro Crate."
keywords = ["language", "scripting", "scripting-language", "scripting-engine"]
categories = ["compilers", "emulators", "memory-management", "parser-implementations", "wasm"]
readme = "./README.md"
license-file = "../../../EULA.md"
documentation = "https://docs.rs/ad-astra"
repository = "https://github.com/Eliah-Lakhin/ad-astra"
publish = true

[features]
default = []
export = []
shallow = ["export"]

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0"

[dependencies.syn]
version = "2.0"
features = ["default", "full", "extra-traits"]

[dependencies.quote]
version = "1.0"

[dependencies.paste]
version = "1.0"

[dependencies.cargo_toml]
version = "0.20"

[dependencies.convert_case]
version = "0.6"

[dependencies.prettyplease]
version = "0.2"

[dependencies.ahash]
version = "0.8"
